--- a/platform/prod/prod-k8s-config.yaml
+++ b/platform/prod/prod-k8s-config.yaml
@@ -11,7 +11,7 @@ spec:
     path: neo-platform
   destination:
     server: https://kubernetes.default.svc
-    namespace: neo-platform
+#    namespace: neo-platform
   syncPolicy:
     automated:
       prune: true
