🔧 chore: add namespace

--- a/platform/prod/prod-k8s-manifests.yaml
+++ b/platform/prod/prod-k8s-manifests.yaml
@@ -11,7 +11,7 @@ spec:
     path: neo-platform/payment-service
   destination:
     server: https://kubernetes.default.svc
-#    namespace: neo-platform
+    namespace: neo-platform
   syncPolicy:
     automated:
       prune: true
