--- a/platform/nonprod/nonprod-k8s-manifests.yaml
+++ b/platform/nonprod/nonprod-k8s-manifests.yaml
@@ -11,7 +11,7 @@ spec:
     path: dev/neo-platform/payment-service
   destination:
     server: https://kubernetes.default.svc
-    namespace: neo-platform
+    namespace: nonprod-neo-platform
   syncPolicy:
     automated:
       prune: true
