--- a/platform/nonprod/nonprod-k8s-manifests.yaml
+++ b/platform/nonprod/nonprod-k8s-manifests.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nonprod-payment-service
   namespace: argocd
 spec:
-  project: neo-platform
+  project: nonprod-neo-platform
   source:
     repoURL: git@github.com:yutthasard-kkp/nonprod-k8s-manifests.git
     targetRevision: main
